<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/obj_Img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/obj_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/obj_Img"
            android:layout_toStartOf="@+id/obj_Img"
            android:padding="2dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/obj_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/obj_name"
            android:layout_toLeftOf="@+id/obj_Img"
            android:layout_toStartOf="@+id/obj_Img"
            android:background="#FF0000"
            android:padding="2dp"
            android:text="@string/region"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/obj_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/obj_reg"
            android:layout_toLeftOf="@+id/obj_Img"
            android:layout_toStartOf="@+id/obj_Img"
            android:padding="2dp"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/obj_add"
            android:layout_toLeftOf="@+id/obj_Img"
            android:layout_toStartOf="@+id/obj_Img"
            >

            <TextView
                android:id="@+id/obj_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="10"
                android:gravity="left"
                android:text="@string/rate"
                android:textColor="@color/blueDark"/>

            <RatingBar
                android:id="@+id/obj_rating"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="5"
                android:gravity="center"
                android:layout_weight="15"/>
            <TextView
                android:id="@+id/rate_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:gravity="right"
                android:layout_weight="20"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>