<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayokhedma.ayokhedma.Fragments.CommentFragment">
    <RelativeLayout
        android:id="@+id/comments_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:visibility="visible">
        <Button
            android:id="@+id/add_comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addComment"
            android:textColor="@color/blueDark"
            android:clickable="true"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:layout_margin="5dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/comment_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/add_comment_text" />
        <Button
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addComment"
            android:textColor="@color/blueDark"
            android:clickable="true"
            android:visibility="gone"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:padding="20dp"
        android:id="@+id/add_comment_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <EditText
            android:id="@+id/subject_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addSubject"
            android:background="@drawable/round_corner"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/comment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="أضف تعليق"
            android:gravity="top"
            android:layout_below="@+id/subject_field"
            android:background="@drawable/round_corner"
            android:padding="15dp"
            android:layout_above="@+id/add" />
        <Button
            android:background="@drawable/round_corner"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_below="@+id/comment_field"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:layout_below="@+id/comment_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:background="@drawable/round_corner" />
    </RelativeLayout>
</RelativeLayout>